<resources>
    <string name="app_name">DevUApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_description">Navega por la app y crea cosas nuevas</string>
    <string name="btn_action_message">¡Presiona el botón para disparar su ejecución!</string>
    <string name="msg_congratulations">¡Felicidades! lograste acceder al segúndo activity</string>

                                    <!-- Strings for Star Wars module-->
    <string name="menu_star_wars">Star Wars</string>
    <string name="sw_title">Api de <br/> <b>Star Wars</b></string>
    <string name="btn_navigate_films">Navegar a la vista de filmes</string>
    <string name="lbl_header_star_wars">Star Wars</string>
    <string name="btn_navigate_star_ships">Navegar a la vista de naves</string>

    <!-- Films -->
    <string name="fetch_films">Obtener películas</string>
    <string name="sw_film_title">Título:</string>
    <string name="sw_fil_id">Id episodio:</string>
    <string name="sw_fil_director">Director</string>
    <string name="sw_fil_producer">Productor</string>
    <string name="sw_fil_release_date">Fecha estreno</string>

    <!-- Star Ships -->
    <string name="btn_show_star_ships">¡Muestrame las naves!</string>
    <string name="btn_reload_star_ships">Recarga las naves >:v</string>
    <string name="lbl_sw_name">Nombre:</string>
    <string name="lbl_sw_model">Model:</string>
    <string name="lbl_sw_cost">Precio:</string>
    <string name="lbl_sw_speed">Velocidad:</string>
    <string name="lbl_sw_crew_limit">Límite de tripulación:</string>
    <string name="lbl_sw_class">Clase:</string>

    <!-- SW Notifications -->
    <string name="btn_navigate_notifications">Navegar a notificaciones</string>
    <string name="btn_show_notification">Mostrar notificación</string>
    <string name="lbl_notification_title">Nueva notificación</string>
    <string name="lbl_notification_text">¡Hola! DevU, tienes una nueva notificación de la app</string>
    <string name="lbl_notification_long_text">¡Hola! DevU, tienes una nueva notificación de la app, esta notificación fue generada desde la pantalla de notificaciones, accede a verla en código para crear tus propias notificaciones.</string>
    <string name="lbl_notification_channel_name">CanalDevU</string>
    <string name="lbl_notification_channel_description">Canal de notificaciones de la aplicaciónDevU</string>

</resources>