<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sw_film_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sw_fil_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sw_fil_director" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sw_fil_producer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sw_fil_release_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_film_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <TextView
            android:id="@+id/tv_film_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <TextView
            android:id="@+id/tv_film_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <TextView
            android:id="@+id/tv_film_producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <TextView
            android:id="@+id/tv_film_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" />


    </LinearLayout>

</LinearLayout>