<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_ss_name_label"
        style="@style/ItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_sw_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_ss_name"
        style="@style/ItemRow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_ss_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_ss_name_label"
        app:layout_constraintTop_toTopOf="@id/tv_ss_name_label"
        app:layout_constraintVertical_bias="0.0"
        tools:text="USS Enterprise" />

    <TextView
        android:id="@+id/tv_ss_model_label"
        style="@style/ItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/lbl_sw_model"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ss_name_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_ss_model"
        style="@style/ItemRow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_ss_model_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_ss_model_label"
        app:layout_constraintTop_toTopOf="@id/tv_ss_model_label"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Space Exploration Ship" />

    <TextView
        android:id="@+id/tv_ss_cost_label"
        style="@style/ItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/lbl_sw_cost"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ss_cost"
        app:layout_constraintEnd_toStartOf="@id/tv_ss_cost"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_ss_cost"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_ss_cost"
        style="@style/ItemRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ss_model_label"
        app:layout_constraintVertical_bias="0.0"
        tools:text="$1000.00" />

    <TextView
        android:id="@+id/tv_ss_crew_label"
        style="@style/ItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/lbl_sw_crew_limit"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ss_crew"
        app:layout_constraintEnd_toStartOf="@id/tv_ss_crew"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_ss_crew"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_ss_crew"
        style="@style/ItemRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ss_cost"
        app:layout_constraintVertical_bias="0.0"
        tools:text="30" />

    <TextView
        android:id="@+id/tv_ss_speed_label"
        style="@style/ItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/lbl_sw_crew_limit"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ss_speed"
        app:layout_constraintEnd_toStartOf="@id/tv_ss_speed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_ss_speed"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_ss_speed"
        style="@style/ItemRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ss_crew"
        app:layout_constraintVertical_bias="0.0"
        tools:text="300,000" />

    <TextView
        android:id="@+id/tv_ss_class_label"
        style="@style/ItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/lbl_sw_class"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_ss_item"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ss_speed"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ss_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_ss_class"
        style="@style/ItemRow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_ss_class_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/gl_ss_item"
        app:layout_constraintTop_toTopOf="@id/tv_ss_class_label"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Deep Explorer" />

</androidx.constraintlayout.widget.ConstraintLayout>